--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -19,6 +19,15 @@
   margin: 0;
 }
 
+.about__cell:nth-child(2){
+  margin-bottom: 52px;
+}
+
+.about__cell:nth-child(3){
+  margin-bottom: 53px;
+}
+
+
 .about__heading{
   font-family: 'Inter';
   font-style: normal;
