--- a/src/components/Specifications/Specifications.css
+++ b/src/components/Specifications/Specifications.css
@@ -1,6 +1,7 @@
 .specifications{
   display: flex;
   align-items: center;
+  margin-top: 150px;
 }
 
 .specifications__container{
@@ -8,7 +9,14 @@
 }
 
 .specifications__title{
-
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+  text-transform: uppercase;
+  color: #131313;
+  margin: 0 0 40px;
 }
 
 .specifications__cell{
@@ -24,7 +32,7 @@
   text-transform: uppercase;
   color: #FFFFFF;
   background: #131313;
-  margin: 30px 0 10px;
+  margin: 0 0 10px;
   padding: 2px 0 3px;
 }
 
@@ -33,8 +41,68 @@
   justify-content: space-between;
 }
 
-.specifications__container_name{
+.specifications__cell-depreciation h3{
+  margin-top: 30px;
+}
 
+.specifications__cell-management h3{
+  margin-top: 26px;
+}
+
+.specifications__cell-transmissions h3{
+  margin-top: 25px;
+}
+
+.specifications__cell-brakes h3{
+  margin-top: 25px;
+}
+
+.specifications__cell-other h3{
+  margin-top: 26px;
+}
+
+.specifications__container_name-general p:nth-child(1){
+  margin-top: -2px;
+}
+
+.specifications__container_name-general p:nth-child(3){
+  margin-top: 27px;
+}
+
+.specifications__container_text-general p:nth-child(1){
+  margin-top: 1px;
+}
+
+.specifications__container_text-general p:nth-child(3){
+  margin-top: 7px;
+}
+
+.specifications__container_text-general p:nth-child(4){
+  margin-bottom: 2px;
+}
+
+.specifications__container_name-depreciation p:nth-child(1){
+  margin-top: 1px;
+}
+
+.specifications__container_text-depreciation p:nth-child(2){
+  padding-top: -4px;
+}
+
+.specifications__container_name-management p:nth-child(1){
+  margin-top: 1px;
+}
+
+.specifications__container_name-transmissions p:nth-child(1){
+  margin-top: 1px;
+}
+
+.specifications__container_name-brakes p:nth-child(1){
+  margin-top: 1px;
+}
+
+.specifications__container_name-other p:nth-child(1){
+  margin-top: 1px;
 }
 
 .specifications__heading_name{
@@ -48,7 +116,7 @@
 }
 
 .specifications__container_text{
-
+  
 }
 
 .specifications__heading_text{
@@ -58,11 +126,12 @@
   font-size: 14px;
   line-height: 120%;
   color: #131313;
-  margin: 5px 0 0;
+  margin: 0 0 5px;
   width: 285px;
 }
 
 .specifications__photo{
+  background: url('../../images/specifications.png');
   width: 570px;
   height: 401px;
   margin: 0 0 0 60px;
