--- a/src/components/Specifications/Specifications.css
+++ b/src/components/Specifications/Specifications.css
@@ -1,7 +1,8 @@
 .specifications{
   display: flex;
   align-items: center;
-  margin-top: 150px;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .specifications__container{
